--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <!-- Add your profile picture here -->
             <img src="profile.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>NITHYAA SRI S</h1>
-            <h3> A Computer Specialist </h3>
+            <h3> I'm a Front-end web development </h3>
         </div>
     </header>
 
